# wetransfer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  requests.rs  responses.rs
src/support/: add_links.json  complete_file_board_upload.json  complete_file_upload.json  create_board.json  create_transfer_request.json  finalize_response.json
src/sync/: board.rs  mod.rs  requester.rs  transfer.rs
