[package]
name = "wetransfer"
version = "0.1.0"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
license = "MIT"
description = "Unofficial WeTransfer client written in Rust."

[dependencies]
reqwest = { version = "0.9.8", features = ["hyper-011"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mockito = "0.13.0"
